# functional

./: CMakeLists.txt  chain.hpp  curry.hpp  test.cpp
include/: chain.hpp  curry.hpp  overload.hpp  traits.hpp
test/: CMakeLists.txt  test.cpp
